// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CTALink > renders primary variant as expected 1`] = `
<div>
  <a
    class="cta-button flex items-center justify-center rounded-lg transition-all duration-200 font-semibold text-base cta-button--primary bg-bluedot-normal text-white hover:bg-bluedot-normal px-4 py-2"
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="cta-button__text"
    >
      Click me
    </span>
  </a>
</div>
`;

exports[`CTALink > renders secondary variant as expected 1`] = `
<div>
  <a
    class="cta-button flex items-center justify-center rounded-lg transition-all duration-200 font-semibold text-base cta-button--secondary bg-transparent text-bluedot-normal border border-bluedot-normal hover:bg-bluedot-lighter px-4 py-2"
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="cta-button__text"
    >
      Click me
    </span>
  </a>
</div>
`;

exports[`CTALink > renders with chevron as expected 1`] = `
<div>
  <a
    class="cta-button flex items-center justify-center rounded-lg transition-all duration-200 font-semibold text-base cta-button--primary bg-bluedot-normal text-white hover:bg-bluedot-normal px-4 py-2"
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="cta-button__text"
    >
      Click me
    </span>
    <span
      class="cta-button__chevron ml-3"
    >
      <img
        alt="→"
        class="cta-button__chevron-icon w-2 h-2"
        src="/icons/chevron_white.svg"
      />
    </span>
  </a>
</div>
`;

exports[`CTALink > renders with custom className 1`] = `
<div>
  <a
    class="cta-button flex items-center justify-center rounded-lg transition-all duration-200 font-semibold text-base cta-button--primary bg-bluedot-normal text-white hover:bg-bluedot-normal px-4 py-2 custom-class"
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="cta-button__text"
    >
      Click me
    </span>
  </a>
</div>
`;
